[package]
name = "rp-pico2w-examples"
version = "0.1.0"
edition = "2021"
authors = ["David Haig <david@ninjametal.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ninjasource/rp-pico2w-examples.git"
description = "Raspberry Pi Pico2 W examples"

[dependencies]
cyw43-pio = { version = "0.3.0" }
embassy-embedded-hal = { version = "0.3.0" }
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0" }
embassy-rp = { version = "0.3.1", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = { version = "0.4.0" }
embassy-net = { version = "0.6.0", features = [
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-usb-logger = { version = "0.4.0" }
cyw43 = { version = "0.3.0", features = ["firmware-logs"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
heapless = "0.8"
static_cell = "2.1"
log = "0.4"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
